# M-detector

./: CMakeLists.txt  README.md  package.xml
cmake/: m_detectorConfig.cmake.in  packages.cmake
config/: kuangye_hesai16_building_mos.yaml  kuangye_hesai16_mos_building.yaml  kuangye_mid360_mos.yaml  kuangye_vlp16_mos.yaml  snail_hesai32_mos.yaml  xiangyin_hesai32_mos.yaml
include/cluster_predict/: voxel_cluster.h
include/m-detector/: DynObjCluster.h  DynObjFilter.h
include/m_detector/: DynObjCluster.h  DynObjFilter.h  DynObjFilterRos.h  parallel_q.h
include/m_detector/cluster_predict/: DBSCAN_kdtree.h  bbox.h  dbscan.h  tools.hpp  voxel_cluster.h
launch/: detector.launch
rviz/: demo.rviz
src/: DynObjCluster.cpp  DynObjFilter.cpp  DynObjFilterRos.cpp  cal_recall_multi.cpp  display_prediction.cpp  dynfilter_with_odom.cpp  reader.cpp
